##*****************************************************************************
## $Id: Makefile.am,v 1.12 2007-04-21 14:50:48 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base

SUBDIRS = \
        src \
        compat \
        man

EXTRA_DIST = META DISCLAIMER TUTORIAL genders.sample genders.spec
