##*****************************************************************************
## $Id: Makefile.am,v 1.14 2007-10-17 17:31:14 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base

SUBDIRS = \
        src \
        compat \
	contrib \
        man

EXTRA_DIST = META DISCLAIMER DISCLAIMER.UC TUTORIAL genders.sample genders.spec
