##*****************************************************************************
## $Id: Makefile.am,v 1.3 2004-05-19 20:39:51 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

gendlibdir = ${prefix}/lib/genders
gendlib_SCRIPTS = gendlib.pl hostlist.pl
EXTRA_DIST = gendlib.pl hostlist.pl
