##*****************************************************************************
## $Id: Makefile.am,v 1.2.4.1 2004-10-27 01:23:45 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

gendlibdir = ${prefix}/lib/genders

gendlib_SCRIPTS = gendlib.pl hostlist.pl

EXTRA_DIST = gendlib.pl hostlist.pl
