##*****************************************************************************
## $Id: Makefile.am,v 1.4 2004-12-14 21:39:23 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

# Don't use ${libdir}, the /lib is a legacy path that must be maintained
gendlibdir = ${prefix}/lib/genders
gendlib_SCRIPTS = gendlib.pl hostlist.pl
EXTRA_DIST = gendlib.pl hostlist.pl
