##*****************************************************************************
## $Id: Makefile.am,v 1.5 2003-05-30 15:48:55 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = compat

man1_MANS = nodeattr.1

man3_MANS = \
        genders.3 \
        genders_attrlist_clear.3 \
        genders_attrlist_create.3 \
        genders_attrlist_destroy.3 \
        genders_errormsg.3 \
        genders_errnum.3 \
        genders_getattr.3 \
        genders_getattr_all.3 \
        genders_getmaxattrlen.3 \
        genders_getmaxattrs.3 \
        genders_getmaxnodelen.3 \
        genders_getmaxvallen.3 \
        genders_getnodename.3 \
        genders_getnodes.3 \
        genders_getnumattrs.3 \
        genders_getnumnodes.3 \
        genders_handle_create.3 \
        genders_handle_destroy.3 \
        genders_nodelist_clear.3 \
        genders_nodelist_create.3 \
        genders_nodelist_destroy.3 \
        genders_load_data.3 \
        genders_perror.3 \
        genders_strerror.3 \
        genders_testattr.3 \
        genders_testattrval.3 \
        genders_is.3 \
        genders_isnode.3 \
        genders_isattr.3 \
        genders_isattrval.3 \
        genders_vallist_clear.3 \
        genders_vallist_create.3 \
        genders_vallist_destroy.3 \
        genders_list.3 \
        genders_stats.3 \
        genders_errors.3 \
        genders_parse.3 \
        libgenders.3
