##*****************************************************************************
## $Id: Makefile.am,v 1.8 2003-05-14 00:08:51 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = \
	Genders \
	Libgenders \
	libgenders \
	nodeattr 
