##*****************************************************************************
## $Id: Makefile.am,v 1.9 2003-05-19 15:56:38 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = \
        Genders \
        Libgenders \
        libgenders \
        nodeattr 
