##*****************************************************************************
## $Id: Makefile.am,v 1.10 2004-05-19 20:39:52 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = libgenders nodeattr Libgenders Genders
