##*****************************************************************************
## $Id: Makefile.am,v 1.1 2007-10-03 20:20:13 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = cfengine-2.2.10 cfengine-3.3.0

EXTRA_DIST = README genders.c