##*****************************************************************************
## $Id: Makefile.am,v 1.1 2003-05-13 01:30:20 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

man3_MANS = gendlib.3
