##*****************************************************************************
## $Id: Makefile.am,v 1.2 2004-05-19 20:39:51 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

man3_MANS = gendlib.3
EXTRA_DIST = gendlib.3
