##*****************************************************************************
## $Id: Makefile.am,v 1.1.4.1 2004-10-27 01:26:53 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

man3_MANS = gendlib.3
EXTRA_DIST = gendlib.3
